# twitter-clone

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.local.yaml  docker-compose.yaml  pyproject.toml
src/twitter/: app.py  auth.py  cli.py
src/twitter/controllers/: redis.py  s3.py  tweets.py  users.py
src/twitter/static/: style.css
src/twitter/templates/: base.html  gallery.html  home.html  index.html  people.html  profile.html  tweet.html
src/twitter/templates/auth/: login.html
src/twitter/templates/components/: add_tweet.html  edit_tweet.html  followers.html  following.html  navbar.html  timeline.html  user_info.html  users.html
src/twitter/templates/error/: 403.html  404.html
tests/: test_twitter.py
tf/dev/: config.tf  main.tf  vars.tf  versions.tf
